--- a/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial_content.tex
@@ -96,17 +96,19 @@ beta  <- 1
 p <- rbeta(n=1,alpha,beta)[1]
 \end{lstlisting}
 \end{snugshade*}}
-
-
+\pagebreak
 \subsubsection{Likelihood function}
 We also need to specify the likelihood function.
-We use the binomial probability for the likelihood function:
+We use the binomial probability for the likelihood function. Since the likelihood is defined only for values of $p$ between 0 and 1, we return 0.0 if $p$ is outside this range:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 # specify the likelihood function
-function RealPos likelihood(p) {
-   l = dbinomial(x,p,n,log=false)
-   return l
+function likelihood(p) {
+    if(p < 0 || p > 1)
+        return 0
+
+    l = dbinomial(x,p,n,log=false)
+    return l
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -117,9 +119,9 @@ Here, we use the beta probability distribution for the prior on $p$:
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
 # specify the prior function
-function RealPos prior(p) {
-   pp = dbeta(p,alpha,beta,log=false)
-   return pp
+function prior(p) {
+    pp = dbeta(p,alpha,beta,log=false)
+    return pp
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -129,13 +131,21 @@ function RealPos prior(p) {
 Additionally, we are going to monitor, \IE store, parameter values into a file during the MCMC simulation.
 For this file we need to write the column headers:
 {\tt \begin{snugshade*}
-\begin{lstlisting}    
+\begin{lstlisting}
 # Prepare a file to log our samples
 write("iteration","p","\n",file="binomial_MH.log")
 write(0,p,"\n",file="binomial_MH.log",append=TRUE)
 \end{lstlisting}
 \end{snugshade*}}
 (You may have to change the newline characters to \texttt{"$\backslash$r$\backslash$n"} if you're using a Windows operating system.)
+We'll also monitor the parameter values to the screen, so let's print the initial values:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+# Print the initial values to the screen
+print("iteration","p")
+print(0,p)
+\end{lstlisting}
+\end{snugshade*}}
 
 \subsection{Writing the MH Algorithm}
 At long last, we can write our MCMC algorithm.
@@ -193,6 +203,8 @@ Here, we actually check if we want to store the value during this iteration.
     if ( (rep % printgen) == 0 ) {
         # Write the samples to a file
         write(rep,p,"\n",file="binomial_MH.log",append=TRUE)
+        # Print the samples to the screen
+        print(rep,p)
     }
 } # end MCMC\end{lstlisting}
 \end{snugshade*}}
@@ -278,14 +290,14 @@ Otherwise, this function does exactly the same what was inside the for loop prev
 
 \subsection{Sliding-window move}
 As a second move we will write a sliding-window move.
-The sliding-window moves propose an update by drawing a random number from a normal distribution and then adding this random number to the current value (\IE centered on the previous value).
+The sliding-window moves propose an update by drawing a random number from a uniform distribution and then adding this random number to the current value (\IE centered on the previous value).
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
 function move_slide( RealPos delta, Natural weight) {
 
     for (i in 1:weight) {
         # Propose a new value of p
-        p_prime <- p + rnormal(n=1,0.0,delta)[1]
+        p_prime <- p + runiform(n=1,-delta,delta)[1]
 
         # Compute the acceptance probability
         R <- ( likelihood(p_prime) / likelihood(p) ) * ( prior(p_prime) / prior(p) )
@@ -304,8 +316,8 @@ function move_slide( RealPos delta, Natural weight) {
 }
 \end{lstlisting}
 \end{snugshade*}}
-This move has another argument, \cl{delta}, additionally to the weight of the move.
-The argument \cl{delta} defines the standard deviation of the normal distribution from which we draw new values.
+In addition to the weight of the move, this move has another argument, \cl{delta}.
+The argument \cl{delta} defines the width of the uniform window from which we draw new values.
 Thus, if \cl{delta} is large, then the proposed values are more likely to be very different from the current value of $p$.
 Conversely, if \cl{delta} is small, then the proposed values are more likely to be very close to the current value of $p$.
 
@@ -313,29 +325,6 @@ Conversely, if \cl{delta} is small, then the proposed values are more likely to 
 
 There is, a priori, no good method for knowing what values of \cl{delta} are most efficient.
 However, there are some algorithms implemented in \RevBayes, called \emph{auto-tuning}, that will estimate good values for \cl{delta}.
-
-
-\begin{framed}
-Note that you could, in principle, use other distributions instead of the normal distribution too. For example, a uniform(-delta,delta) distribution would be similarly applicable.
-\end{framed}
-
-\subsubsection{Reflecting proposal}
-One thing we have to be careful about is making sure $p$ (being a probability) stays between 0 and 1.
-We can do that by reflecting any proposals outside of that region back into the valid region.
-(One of the nice things about the real MCMC algorithms implemented in \RevBayes is that it takes care of this for us).
-{\tt \begin{snugshade*}
-\begin{lstlisting}    
-	if (p_prime < 0) {
-		p_prime <- abs(p_prime)
-	} else if (p_prime > 1) {
-		p_prime <- 2 - p_prime
-	}
-\end{lstlisting}
-\end{snugshade*}}
-However, this reflection procedure would have to be repeated until the values fall inside the acceptable range.
-Another alternative, as implicitly used here, is that the prior and/or likelihood will return \emph{nan} if the parameter values are outside the allowed range.
-There are just more rejected, and thus wasted, proposals.
-
 
 \subsection{Scaling move}
 As a third and final move we will write a scaling move.
@@ -348,7 +337,7 @@ function move_scale( RealPos lambda, Natural weight) {
 
     for (i in 1:weight) {
         # Propose a new value of p
-        sf <- exp( lambda * ( runif(n=1,0,1) - 0.5 ) )
+        sf <- exp( lambda * ( runif(n=1,0,1)[1] - 0.5 ) )
         p_prime <- p * sf
 
         # Compute the acceptance probability
@@ -372,11 +361,11 @@ As before, this move has a tuning parameter called \emph{lambda}.
 
 \begin{framed}
 The sliding-window and scaling moves are very common and popular moves in \RevBayes.
-The code examples here are actually showing the exact same equation as implemented internally, except the reflection at the boundaries.
+The code examples here are actually showing the exact same equation as implemented internally.
 It will be very useful for you to understand these moves.	
 \end{framed}
 
-
+\pagebreak
 
 
 \subsection{Exercise 2}
