--- a/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Intro_Tutorial/RB_MCMC_Intro_Tutorial_content.tex
@@ -120,6 +120,9 @@ Here, we use the beta probability distribution for the prior on $p$:
 \begin{lstlisting}    
 # specify the prior function
 function prior(p) {
+    if(p < 0 || p > 1)
+        return 0
+        
     pp = dbeta(p,alpha,beta,log=false)
     return pp
 }
