format edits to archery tutorial

--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial.tex
@@ -7,15 +7,15 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
 \lhead{ }
-\rhead{\textsc {\RevBayes~Tutorial --- My First MCMC}}
+\rhead{\textsc {\RevBayes~Tutorial --- A Simple Introduction to MCMC}}
 
 \thispagestyle{plain}
 \begin{center}
 
 \textbf{\LARGE Introduction to MCMC using \RevBayes}\\\vspace{2mm}
-% \textbf{\it{\Large Total-Evidence Analysis of Fossil and Extant Taxa under the Fossilized Birth-Death Process}}\\\vspace{2mm}
+\textbf{\it{\Large A Simple Example for Building a Hierarchical Model and Sampling under Markov Chain Monte Carlo}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Wade Dismukes, Tracy Heath, Walker Pett}
+{\Large Wade Dismukes, Tracy A. Heath, Walker Pett}
 \vspace{1cm}
 \end{center}
 
